horizontal scroll fix

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,8 @@
   margin-right: auto;
   margin-left: auto;
 }
-@media (min-width: 576px) {
+
+/* @media (min-width: 576px) {
   .container {
     max-width: 540px;
   }
@@ -25,7 +26,7 @@
   .container {
     max-width: 90%;
   }
-}
+} */
 
 @media (min-width: 992px) {
   .container {
