--- a/src/components/index/index.css
+++ b/src/components/index/index.css
@@ -379,6 +379,7 @@ ul {
   }
 }
 /* ---------------last section------------------- */
+
 .gamma__content {
   margin-bottom: 60px;
 }
@@ -390,7 +391,7 @@ ul {
   font-size: 84px;
   line-height: 90px;
   letter-spacing: -0.015em;
-  color: #ff7a00;
+  color: #FDB72A;
 }
 
 .gamma__content p,
@@ -414,8 +415,8 @@ ul {
 .gamma_info_item {
   border-radius: 46px;
   overflow: hidden;
-  justify-self: start;
-  align-self: center;
+  /* justify-self: start;
+  align-self: center; */
 }
 
 .gamma_info_item img {
@@ -453,6 +454,7 @@ ul {
 .gamma-show-md {
   display: none;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 @media (max-width: 980px) {
   .gamma_info {
@@ -462,7 +464,7 @@ ul {
     padding: 55px 35px;
   }
   .gamma_info_item img {
-    height: 350px;
+    height: 360px;
   }
   .gamma__list p {
     font-size: 12px;
@@ -520,5 +522,16 @@ ul {
   .item2 img {
     width: 260px;
     height: 270px;
+  }
+}
+
+@media(max-width:800px){
+  .gamma{
+    width: auto;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding: 5%;
   }
 }
